alignment and issue fix

--- a/imdb.css
+++ b/imdb.css
@@ -29,6 +29,7 @@ body{
 #movieInfo{
     display: flex;
     height: 300px;
+    justify-content: center;
 }
 
 #movieList{
